# ffmpeg-android

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/site/javen/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/site/javen/ffmpeg/: FFmpegEncoder.java  MainActivity.java
app/src/main/jni/: audio-decoder.c  audio-decoder.h  common.h  mp4-encoder.c  mp4-encoder.h  native-lib.c
app/src/main/jni/libffmpeg/: config.h
app/src/main/res/layout/: activity_main.xml
app/src/test/java/site/javen/ffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
